great-idea-website/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Your code starts here! */
body{
	margin: 0 32%;
}

nav {
	display: flex;
	justify-content: space-around;
	padding: 2%;
}
nav a{
	text-decoration: none;
	color: #D3D3D3;
	padding-top: 8px;
}

.title-section {
	display: flex;
	justify-content: center;
	padding: 5% 0;
}

.title-section section {
	padding-right: 100px;
	display:flex;
	flex-direction: column;
	justify-content: center;
	align-content: center;


}

.title-section section h1{
	font-size: 100px;
	text-align: center;
}
.title-section section a{
	margin: 0 25%;
	padding: 5px 0;
	font-size: 20px;
	text-decoration: none;
	color: black;
	border: 2px solid gray;
	
	text-align: center;
}

.title-section section a:hover{
	color: #48D1CC;

}

.features {
	display: flex;
	justify-content: space-between;
	border-top: 1px solid black;
	margin: 3% 0;
	font-size: 20px;
}
.features h2{
	padding: 4% 0;
}

.features p, .features h2{
	margin: 0 2%;
}

.middle-img {
	display: flex;
	justify-content: center;
}



.services {
	display: flex;
	justify-content: space-between;
	border-bottom: 1px solid black;
	padding: 3% 0;
	font-size: 20px;
}

.services h2{
	padding-bottom: 4%;
}

.services p, .services h2{
	margin: 0 2%;
}




.contact{
	display: flex;
	justify-content: flex-start;
	flex-direction: column;
	margin-top: 10px;
}
.contact p, .contact h2{
	margin: 0;
	padding: 6px 0;
}

footer {
	display: flex;
	justify-content: center;
}

